hide long question on mobile (avoid conflict)

--- a/public/css/surveyViewStyles.css
+++ b/public/css/surveyViewStyles.css
@@ -200,13 +200,7 @@ only screen and (max-width: 760px),
         white-space: nowrap;
     }
 
-    /*
-    Label the data
-    */
-    #change-history td:nth-of-type(1):before { content: "Name"; }
-    #change-history td:nth-of-type(2):before { content: "Club"; }
-    #change-history td:nth-of-type(3):before { content: "Frage 1"; }
-    #change-history td:nth-of-type(4):before { content: "Frage 2"; }
+
 
 
     /* change padding of cells, compared to desktop */
